# synthetic

./: README.md  pyproject.toml
notebook/: Alerting simulation.ipynb
synthetic/: generate.py
tests/: test_synthetic.py
