[tool.poetry]
name = "synthetic"
version = "0.1.0"
description = ""
authors = ["bertilhatt <bertil.hatt@ensae.org>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.4"
Faker = "^9.8.0"
requests = "^2.28.1"
jupyter = "^1.0.0"
notebook = "^6.4.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
